tests/ui/parser/issue-100197-mut-let.rs
// run-crablangfix

fn main() {
    mut let _x = 123;
    //~^ ERROR invalid variable declaration
}
